<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <TextView
        android:layout_marginTop="32sp"
        android:id="@+id/textAppName"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textAppVersion"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAppName" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textVersion"
        app:layout_constraintVertical_bias="0.05">

        <LinearLayout
            android:id="@+id/rifkyCard"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/adiCard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageViewRifki"
                android:layout_width="64sp"
                android:layout_height="64sp"
                app:srcCompat="@drawable/rifki" />

            <TextView
                android:id="@+id/textNameRifki"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:layout_weight="1"
                android:text="Rifki Muh. Ilyasa"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textNimRifki"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2sp"
                android:layout_weight="1"
                android:text="223307054"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/adiCard"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/rifkyCard"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/imageViewAdi"
                android:layout_width="64sp"
                android:layout_height="64sp"
                app:srcCompat="@drawable/adi" />

            <TextView
                android:id="@+id/textNameAdi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:layout_weight="1"
                android:text="Amir Zuhdi W."
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textNimAdi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2sp"
                android:layout_weight="1"
                android:text="223307033"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16sp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:text="@string/textAppDesc"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>